fix #473 'res' and 'config.xml' not copied at FU startup